@@ -16,16 +16,14 @@
  */
 package org.apache.solr.common.params;
 
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.List;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
 
 import org.apache.lucene.util.LuceneTestCase;
 import org.apache.solr.common.SolrException;
-import org.apache.solr.common.util.NamedList;
 
 /**
  */
@@ -127,36 +125,6 @@ public class SolrParamTest extends LuceneTestCase {
 
   }
 
-  public void testMultiValues() {
-    NamedList nl = new NamedList();
-    nl.add("x", "X1");
-    nl.add("x", "X2");
-    nl.add("x", new String[]{"X3", "X4"});
-    Map<String, String[]> m = SolrParams.toMultiMap(nl);
-    String[] r = m.get("x");
-    assertTrue(Arrays.asList(r).containsAll(Arrays.asList(new String[]{"X1", "X2", "X3", "X4"})));
-  }
-
-  public void testGetAll() {
-    ModifiableSolrParams params = new ModifiableSolrParams();
-    params.add("x", "X1");
-    params.add("x", "X2");
-    params.add("y", "Y");
-    Map<String, Object> m = params.getAll(null, "x", "y");
-    String[] x = (String[]) m.get("x");
-    assertEquals(2, x.length);
-    assertEquals("X1", x[0]);
-    assertEquals("X2", x[1]);
-    assertEquals("Y", m.get("y"));
-    try {
-      params.required().getAll(null, "z");
-      fail("Error expected");
-    } catch (SolrException e) {
-      assertEquals(e.code(), SolrException.ErrorCode.BAD_REQUEST.code);
-
-    }
-  }
-
   public void testModParamAddParams() {
 
     ModifiableSolrParams aaa = new ModifiableSolrParams();
@@ -219,8 +187,8 @@ public class SolrParamTest extends LuceneTestCase {
     
     final String  pstr = "string";
     final Boolean pbool = Boolean.TRUE;
-    final Integer pint = new Integer( 100 );
-    final Float   pfloat = new Float( 10.6f );
+    final Integer pint = 100;
+    final Float   pfloat = 10.6f;
     
     // Make sure they parse ok
     assertEquals( pstr   , params.get(      "str"      ) );
@@ -317,7 +285,7 @@ public class SolrParamTest extends LuceneTestCase {
     assertEquals( pstr                  , defaults.get( "str"      ) );
     // in default, not in params
     assertEquals( "default"             , defaults.get( "dstr"      ) );
-    assertEquals( new Integer(123)      , defaults.getInt(  "dint"     ) );
+    assertEquals(Integer.valueOf(123), defaults.getInt(  "dint"     ) );
     // in params, overriding defaults
     assertEquals( pint                  , defaults.getInt(   "int"      ) );
     // in neither params nor defaults
